--- a/businesscase.html
+++ b/businesscase.html
@@ -135,23 +135,55 @@
 
 
         <div class="container-xxl bg-primary newsletter my-5 wow fadeInUp" data-wow-delay="0.1s">
-            <div class="container px-lg-5 " style="height:500px">
-                <div class="row align-items-center" style="height: 250px;">
+            <div class="container px-lg-5" style="height:auto;">
+                <div class="row align-items-center" style="height:auto;">
                     <div class="col-12 col-md-6">
-                        <h3 class="text-white" style="text-decoration: underline; margin-top:3.5rem">Smart Traffic Management System</h3>
-                        <div class="w-100 mt-3" style="text-align: justify; color: whitesmoke;" style="font-family:Georgia">
-                            Growing traffic congestion, ineffective traffic management, and growing road safety issues are major challenges for urban regions around the world. Due to their inability to adjust to real-time traffic circumstances and their fixed signal timings and manual interventions, traditional traffic systems frequently result in accidents, delays, and increased fuel consumption and carbon emissions. Additionally, these problems are made worse by the absence of predictive methods for addressing crises and peak-hour traffic, which has a detrimental effect on commuters and urban mobility. This emphasizes the necessity of an intelligent, real-time solution that makes use of cutting-edge technology like machine learning, the Internet of Things, and optimization algorithms in order to dynamically control traffic flow, lessen congestion, and improve road safety. In order to overcome these obstacles, a Smart Traffic Management System (STMS) offers an effective, data-driven, and adaptable traffic control system.
-
+                        <h3 class="text-white" style="text-decoration: underline; margin-top:3.5rem">
+                            Smart Traffic Management System
+                        </h3>
+                        <div class="w-100 mt-3" style="text-align: justify; color: whitesmoke; font-family: Georgia;">
+                            Growing traffic congestion, ineffective traffic management, and growing road safety issues are 
+                            major challenges for urban regions around the world. Due to their inability to adjust to 
+                            real-time traffic circumstances and their fixed signal timings and manual interventions, 
+                            traditional traffic systems frequently result in accidents, delays, and increased fuel consumption 
+                            and carbon emissions. Additionally, these problems are made worse by the absence of predictive 
+                            methods for addressing crises and peak-hour traffic, which has a detrimental effect on commuters 
+                            and urban mobility. This emphasizes the necessity of an intelligent, real-time solution that makes 
+                            use of cutting-edge technology like machine learning, the Internet of Things, and optimization 
+                            algorithms in order to dynamically control traffic flow, lessen congestion, and improve road safety. 
+                            In order to overcome these obstacles, a Smart Traffic Management System (STMS) offers an effective, 
+                            data-driven, and adaptable traffic control system.
+                        </div>
+                        <div class="w-100 mt-4" style="text-align: justify; color: whitesmoke; font-family: Georgia; font-weight: bold;">
+                            <strong>SDG 11.2:</strong> Provide access to safe, affordable, accessible, and sustainable transport 
+                            systems for all, improving road safety, notably by expanding public transport, with special attention 
+                            to the needs of those in vulnerable situations, women, children, persons with disabilities, and older 
+                            persons.
+                        </div>
+                        <div class="w-100 mt-4" style="text-align: justify; color: whitesmoke; font-family: Georgia;  font-weight: bold;">
+                            Traffic congestion is a major issue in urban areas, leading to increased travel time, fuel consumption, 
+                            and air pollution. This use case aims to create a city with regular and proper management of traffic.
+                        </div>
+                        <div class="w-100 mt-4" style="text-align: justify; color: whitesmoke; font-family: Georgia; font-weight: bold;">
+                            <strong>Indicator 11.2.1:</strong> Proportion of population that has convenient access to public transport, 
+                            by sex, age, and persons with disabilities.
+                        </div>
+                        <div class="w-100 mt-4" style="text-align: justify; color: whitesmoke; font-family: Georgia; font-weight: bold;">
+                            For this business case, the primary objective is the need to find a way in which there is no traffic 
+                            coagulation. In other words, we can say that a way which has no cycles. So for this use case, we can 
+                            use Kruskal's algorithm which gives us the Minimum Spanning Tree (MST), a way which connects all the 
+                            vertices without having any cycles.
                         </div>
                     </div>
                     <div class="col-md-6 text-center mb-n5 d-none d-md-block">
-                        <!-- <img class="img-fluid mt-5" style="height: 250px;" src="img/newsletter.png"> -->
+                        <!-- Lottie Animation -->
                         <iframe src="https://lottie.host/embed/d19a2f40-f3ee-45fb-ae54-029f3a22627f/V3AmvjqHMY.lottie" style="height: 20rem;"></iframe>
                     </div>
                 </div>
             </div>
         </div>
-
+        
+        
 
         <div class="container-xxl py-5 bg-light">
             <div class="container">
