--- a/coursereflexation.html
+++ b/coursereflexation.html
@@ -189,7 +189,7 @@
                     <!-- Pavan N -->
                     <div class="col-lg-4 col-md-6 portfolio-item wow zoomIn" data-wow-delay="0.1s">
                         <div class="position-relative rounded overflow-hidden">
-                            <img class="img-fluid w-100" src="img/p1.jpg" alt="Pavan N">
+                            <img class="img-fluid w-100" src="img/p1.jpg" alt="Pavan N" >
                             <div class="portfolio-overlay">
                                 <div class="mt-auto">
                                     <a href="#"><small class="text-white"><i class="fa fa-folder me-2"></i>Click Here</small></a>
@@ -202,7 +202,7 @@
                     <!-- Kartik D -->
                     <div class="col-lg-4 col-md-6 portfolio-item wow zoomIn" data-wow-delay="0.3s">
                         <div class="position-relative rounded overflow-hidden">
-                            <img class="img-fluid w-100" src="img/portfolio-5.jpg" alt="Kartik D">
+                            <img class="img-fluid w-100" src="img/WhatsApp Image 2024-12-30 at 20.18.04_0e020b0f.jpg" alt="Kartik D">
                             <div class="portfolio-overlay">
                                 <div class="mt-auto">
                                     <a href="#"><small class="text-white"><i class="fa fa-folder me-2"></i>Click Here</small></a>
