--- a/courseproject.html
+++ b/courseproject.html
@@ -221,6 +221,23 @@
                             </div>
                         </div>
                     </div>
+                    <!-- team member 5 -->
+                    <div class="col-lg-4 wow fadeInUp" data-wow-delay="0.1s">
+                        <div class="team-item text-center">
+                            <img class="img-fluid rounded w-100 team-photo" src="img/WhatsApp Image 2024-12-30 at 20.18.04_0e020b0f.jpg" alt="Pavan N">
+                            <div class="px-4 py-3">
+                                <h5 class="fw-bold m-0">Karthik D</h5>
+                                <ul class="list-unstyled mt-2">
+                                    <li>
+                                        <a href="#">
+                                            <small>Smart Land Allocation and Revenue Management</small>
+                                        </a>
+                                    </li>
+                                    
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
