--- a/creflex.html
+++ b/creflex.html
@@ -364,10 +364,10 @@
                     <div class="col-lg-3 col-md-6 mt-4 mt-md-0">
                         <h5 class="text-uppercase mb-3"  style="color:white">Contact Us</h5>
                         <p class="mb-1">
-                            <i class="fas fa-envelope me-2"></i>info@daaportal.com
+                            <i class="fas fa-envelope me-2"></i>koturpritesh@gmail.com
                         </p>
                         <p class="mb-0">
-                            <i class="fas fa-phone-alt me-2"></i>+123 456 7890
+                            <i class="fas fa-phone-alt me-2"></i>+91 90199 68839
                         </p>
                     </div>
                 </div>
