--- a/courseproject.html
+++ b/courseproject.html
@@ -269,9 +269,9 @@
                     <div class="col-lg-3 col-md-6 mt-4 mt-md-0">
                         <h5 class="text-uppercase "  style="color:white">Quick Links</h5>
                         <ul class="list-unstyled">
-                            <li><a href="#about" class="text-light text-decoration-none">About</a></li>
-                            <li><a href="#projects" class="text-light text-decoration-none">Projects</a></li>
-                            <li><a href="#contact" class="text-light text-decoration-none">Contact</a></li>
+                            <li><a href="index.html" class="text-light text-decoration-none">About</a></li>
+                            <li><a href="courseproject.html" class="text-light text-decoration-none">Projects</a></li>
+                            <li><a href="koturpritesh@gmail.com" class="text-light text-decoration-none">Contact</a></li>
                         </ul>
                     </div>
         
