--- a/courseproject.html
+++ b/courseproject.html
@@ -229,7 +229,7 @@
                                 <h5 class="fw-bold m-0">Karthik D</h5>
                                 <ul class="list-unstyled mt-2">
                                     <li>
-                                        <a href="#">
+                                        <a href="https://toxic460.github.io/mydaaportfolio/table.html">
                                             <small>Smart Land Allocation and Revenue Management</small>
                                         </a>
                                     </li>
