--- a/courseproject.html
+++ b/courseproject.html
@@ -171,7 +171,7 @@
                                 <h5 class="fw-bold m-0">Prasad H</h5>
                                 <ul class="list-unstyled mt-2">
                                     <li>
-                                        <a href="businesscase.html">
+                                        <a href="https://prasad-huddar.github.io/Design-and-analysis-of-algorithm/businesscase.html">
                                             <small>Waste Collection and Management System</small>
                                         </a>
                                     </li>
