--- a/courseproject.html
+++ b/courseproject.html
@@ -187,7 +187,7 @@
                                 <h5 class="fw-bold m-0">Prajwal K</h5>
                                 <ul class="list-unstyled mt-2">
                                     <li>
-                                        <a href="#">
+                                        <a href="https://bitchstien.github.io/prajwalrepo/portfolio.html">
                                             <small>Public Transportation Scheduling and Optimization</small>
                                         </a>
                                     </li>
