--- a/coursereflexation.html
+++ b/coursereflexation.html
@@ -179,7 +179,7 @@
                             <img class="img-fluid w-100" src="img/cr.jpg" alt="Prajwal K">
                             <div class="portfolio-overlay">
                                 <div class="mt-auto">
-                                    <a href="#"><small class="text-white"><i class="fa fa-folder me-2"></i>Click Here</small></a>
+                                    <a href="https://bitchstien.github.io/prajwalrepo/portfolio.html"><small class="text-white"><i class="fa fa-folder me-2"></i>Click Here</small></a>
                                     <a class="h5 d-block text-white mt-1 mb-0" href="">Prajwal K</a>
                                 </div>
                             </div>
