--- a/businesscase.html
+++ b/businesscase.html
@@ -401,12 +401,12 @@
             <h3 class="text-center  mt-4">C++ Code for Smart Traffic Management System</h3>
             <div class="code-box">
                 <pre><code class="cpp">
-#include <iostream>
-#include <vector>
-#include <queue>
-#include <climits>
-#include <unordered_map>
-#include <algorithm>
+#include &lt;iostream&gt;
+#include &lt;vector&gt;
+#include &lt;queue&gt;
+#include &lt;climits&gt;
+#include &lt;unordered_map&gt;
+#include &lt;algorithm&gt;
 
 using namespace std;
 
