--- a/courseproject.html
+++ b/courseproject.html
@@ -208,7 +208,7 @@
                                 <h5 class="fw-bold m-0">Pavan N</h5>
                                 <ul class="list-unstyled mt-2">
                                     <li>
-                                        <a href="#">
+                                        <a href="https://pavannagesh.github.io/pavanrepo/buscase.html">
                                             <small>Emergency Response and Disaster Management</small>
                                         </a>
                                     </li>
